Correction du contraste

--- a/style.css
+++ b/style.css
@@ -742,7 +742,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .portfolio-thumb {
